# rex-ai-assistant

./: .commitlintrc.yml  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  APP_ROADMAP.md  ARCHITECTURE_ANALYSIS.md  BATCH_001_PROMPT.md  CHANGELOG.md  CHANGELOG_IMPROVEMENTS.md  CLAUDE.md  COMPLETED_WORK_SUMMARY.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  OLLAMA_INTEGRATION_GUIDE.txt  PRD-DONE.md  PRD-full-repo-audit.md  PRD-full-test-and-fix.md  PRD-gui-autonomy-integrations.md  PRD-master-next-cycle.md  PRD-openclaw-http-integration.md  PRD-openclaw-pivot-for-rex.md  PRD-repo-quality.md  PRD-voice-selector-and-fixes.md  PRD.md  Pipfile  RALPH_CIRCLE_PROMPT.md  RALPH_RULES.md  RALPH_TASK_BOARD.md  README.md  README.windows.md  ROADMAP_BIBLE.md  RUNNING.md  SECURITY_ADVISORY.md  (+107 more)
.claude/: ralph-loop.local.md
.githooks/: commit-msg
.github/: pull_request_template.md
.github/workflows/: ci.yml  commitlint.yml  release-please.yml
Memory/: README.md
Memory/cole/: core.json  notes.md
Memory/james/: core.json  notes.md
assets/: README.md
assets/brand/: README.md
assets/voices/: .gitkeep  README.md
config/: autonomy.json  rex_config.example.json  rex_config.schema.json  triage_rules.json
data/: mock_calendar.json  mock_emails.json  mock_github.json
deploy/systemd/: rex-agent.service  rex-api.service  rex-tts.service  rex-voice.service
docs/: ARCHITECTURE.md  BRANDING.md  DEPENDENCIES.md  DEPLOYMENT_CHECKLIST.md  FINAL_DELIVERY_SUMMARY.txt  INDEX.md  INSTRUCTION_MANUAL.md  QUICK_REFERENCE.md  README_STABILIZATION.md  SECURITY_DEPENDENCIES.md  UI_SURFACES.md  VERIFICATION_REPORT_VOICE_IDENTITY_BL009_BL012.md  WORKFLOW.md  advanced-install.md  api.md  audit.md  autonomy.md  branch_sync.md  browser_os.md  calendar.md  codex_verification_audit_2026-02-16.md  computers.md  configuration.md  contracts.md  credentials.md  dashboard.md  deployment.md  developer_tools.md  distribution.md  docker.md  doctor.md  email.md  environment-variables.md  event_bus.md  followup_engine.md  github.md  hardening.md  home_assistant.md  knowledge_base.md  memory.md  (+17 more)
docs/claude/: COMMANDS_AND_ENTRYPOINTS.md  CONFIG_AND_SECURITY.md  INTEGRATIONS_STATUS.md  TESTING_AND_QUALITY.md
docs/contracts/: Action.json  Approval.json  EvidenceRef.json  Notification.json  Task.json  ToolCall.json  ToolResult.json  index.json
docs/prompts/: CLAUDE_BUILD_PROMPT.txt  CODEX_REVIEW_FIX_PROMPT.txt
docs/security/: INDEX.md  SECRET-SCAN.md  SECURITY_AUDIT_2026-01-08.md  SECURITY_FIX_SUMMARY.md  VULNERABILITY-SCAN.md
examples/: sample_workflow.json
gui/: electron.vite.config.ts  package.json  progress-gui-autonomy-integrations.txt  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo
logs/: mqtt_latency_report.md
mqtt/: setup_mosquitto.ps1  setup_mosquitto.sh
node_installers/: .env.node  README.md  install_debian.sh  install_windows.ps1
plugins/: __init__.py  web_search.py
plugins/skills/: example_weather_skill.py
profiles/: default.example.json  james.example.json  profile.schema.json
rex/: __init__.py  __main__.py  _pydantic_stub.py  api_key_auth.py  app.py  app_launcher.py  assistant.py  assistant_errors.py  audit.py  automation_registry.py  autonomy_modes.py  browser_automation.py  calendar_service.py  cli.py  compat.py  config.py  config_manager.py  credentials.py  cue_store.py  custom_voices.py  dashboard_store.py  db_pool.py  dep_errors.py  digest_job.py  doctor.py  email_service.py  escalation_job.py  event_bus.py  event_triggers.py  exception_handler.py  executor.py  first_run.py  followup_engine.py  geolocation.py  github_service.py  graceful_shutdown.py  gui_app.py  ha_bridge.py  health.py  history_store.py  (+60 more)
rex/audio/: __init__.py  smart_speaker_mic.py  smart_speaker_output.py  speaker_discovery.py
rex/autonomy/: __init__.py  clarifier.py  cost_estimator.py  feedback.py  goal_graph.py  goal_parser.py  history.py  llm_planner.py  models.py  preference_learner.py  preferences.py  replanner.py  retry.py  rule_planner.py  runner.py  tool_cache.py
rex/calendar_backends/: __init__.py  base.py  factory.py  free_busy_stub.py  free_time_finder.py  ics_backend.py  ics_parser.py  (+2 more)
scripts/: README.md  build_release.sh  check_imports.py  claude_architect.ps1  claude_auditor.ps1  claude_builder.ps1  doctor.py  export_contract_schemas.py  find_gpt2_model.py  gen_coverage_gaps.py  generate_wake_sound.py  list_audio.py  manual_search_demo.py  manual_whisper_demo.py  run_primary_agent.ps1  run_verifier_agent.ps1  scan_imports.py  security_audit.py  sync_branches.sh  test_imports.py  test_mic_open.py  test_transformers_patch.py  test_voice_pipeline.py  validate_deployment.py  validate_wakeword_model.py  windows_agent.py
tests/: __init__.py  conftest.py  git_helpers.py  test_assistant.py  test_audio_config.py  test_audio_device_selection.py  test_audit.py  test_autonomy_alternatives.py  test_autonomy_apply_preferences.py  test_autonomy_budget_config.py  test_autonomy_clarifier.py  test_autonomy_cost_estimator.py  test_autonomy_cost_tracking.py  test_autonomy_feedback.py  test_autonomy_feedback_injection.py  test_autonomy_goal_graph.py  test_autonomy_goal_graph_runner.py  test_autonomy_goal_parser.py  test_autonomy_history.py  test_autonomy_history_integration.py  test_autonomy_models.py  test_autonomy_preference_learner.py  test_autonomy_preferences.py  test_autonomy_replanner.py  test_autonomy_retry.py  test_autonomy_runner.py  test_autonomy_tool_cache.py  test_browser_automation.py  test_calendar_backend_base.py  test_calendar_ics_backend.py  test_calendar_service.py  test_capabilities.py  test_chat_api.py  test_cli.py  test_cli_devtools.py  test_cli_email_accounts.py  test_cli_memory_kb.py  test_cli_messaging_notification.py  test_cli_planner_executor.py  test_cli_scheduler.py  (+380 more)
tools/: test_mqtt_audio.py
utils/: __init__.py  audio_device.py  env_loader.py  env_schema.py  env_writer.py  settings_schema.py  tooltips.py  voice_discovery.py  voice_preview.py
(+264 files in other folders)
